add khomekey & cmouse dev

--- a/input_key/Makefile
+++ b/input_key/Makefile
@@ -1,7 +1,8 @@
 #将你所写的驱动程序编译成模块形式
-obj-m	+= kinput.o
+# obj-m	+= kinput.o
+obj-m += khomekey.o
 #你需要的内核
-KERNEL := /home/sni/workSpace/linux-3.5
+KERNEL := /home/project/Downloads/linux-3.5
 #模块编译
 all:
 	make -C $(KERNEL) M=`pwd` modules
