--- a/input_key/Makefile
+++ b/input_key/Makefile
@@ -2,10 +2,15 @@
 # obj-m	+= kinput.o
 obj-m += khomekey.o
 #你需要的内核
-KERNEL := /home/project/Downloads/linux-3.5
+KERNEL := /home/sni/workSpace/linux-3.5
 #模块编译
 all:
 	make -C $(KERNEL) M=`pwd` modules
+	arm-linux-gcc chomekey.c -o chomekey
 #模块清除
 clean:
 	make -C $(KERNEL) M=`pwd` clean
+	rm chomekey
+
+bin:
+	arm-linux-gcc chomekey.c -o chomekey
