add get ft5x0x ts postion

--- a/input_mouse/Makefile
+++ b/input_mouse/Makefile
@@ -1,5 +1,7 @@
 clean:
-	rm -rf get_mouse
+	# rm -rf get_mouse
+	rm -rf getft5x0xXY
 
 all:
-	gcc get_mouse.c -o get_mouse
+	# gcc get_mouse.c -o get_mouse
+	arm-linux-gcc getft5x0xXY.c -o getft5x0xXY
